<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:background="@color/light_background"
        >

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/label_menu"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_explore"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/menu"
            />

        <include
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/item_cart_count"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_search"
            android:hint="@string/hint_search"
            android:textColorHint="?android:colorControlHighlight"
            android:inputType="text"
            android:paddingHorizontal="22dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="12dp"
            android:importantForAccessibility="no"
            android:importantForAutofill="no"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@id/filter"
            app:layout_constraintBottom_toBottomOf="@id/filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filter"
            />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_filter"
            android:src="@drawable/ic_filter"
            android:scaleType="center"
            android:contentDescription="@string/label_filter"
            app:layout_constraintTop_toBottomOf="@id/cart"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/brands_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/filter"
            tools:listitem="@layout/item_brand"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/brands_list"
            tools:listitem="@layout/item_car"
            tools:itemCount="4"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/home"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_shopping_cart"
        android:src="@drawable/ic_shopping_cart"
        android:layout_marginBottom="20dp"
        app:elevation="10dp"
        app:layout_anchor="@id/bottom_app_bar"
        app:layout_anchorGravity="center"
        app:tint="@color/yellow"
        app:backgroundTint="@color/purple_700"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>