<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:background="@color/light_background"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/label_menu"
            android:layout_marginStart="24dp"
            app:tint="@color/purple_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/car_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_car_details"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back"
            />

        <include
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/item_cart_count"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/cart"
            app:layout_constraintStart_toStartOf="@id/back"
            tools:text="Honda Accord V6"
            />

        <include
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            layout="@layout/item_car_details"
            />

        <TextView
            android:id="@+id/date_posted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_light"
            android:textSize="15sp"
            android:layout_marginBottom="8dp"
            android:paddingTop="12dp"
            android:elevation="1dp"
            app:layout_constraintBottom_toTopOf="@id/add_to_cart"
            app:layout_constraintStart_toStartOf="@id/add_to_cart"
            tools:text="Posted: 23-July-2021"
            />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            android:elevation="1dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/add_to_cart"
            app:layout_constraintEnd_toEndOf="@id/add_to_cart"
            tools:text="Price: #5,000,000"
            />

        <TextView
            android:id="@+id/add_to_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_add_to_cart"
            android:textSize="14sp"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:elevation="20dp"
            android:background="@drawable/bg_action_button"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp"
            android:paddingVertical="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/date_posted"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_car_details_footer"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>